media/jellyfin/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-route
  namespace: media
spec:
  parentRefs:
  - name: cluster-gateway
    namespace: network
    sectionName: https
  hostnames:
  - "jellyfin.${INFRA_DOMAIN}"
  rules:
  - backendRefs:
    - name: jellyfin
      port: 8096
